tests/paczka1/fuzzy1/84980948.err
Error in line 1: CSP5HD A741 13,5
Error in line 2: ZXhg9 A741 92,2
Error in line 9: CSP5HD A595 53,3
Error in line 18: XKt S190 58,9
Error in line 31: CSP5HD S190 78,4
